--- a/Examples/FreestarInterstitialApp/Podfile
+++ b/Examples/FreestarInterstitialApp/Podfile
@@ -2,8 +2,8 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 use_frameworks!
 
-target "FreestarBannerApp" do
-    pod 'FSAdSDK/Banner'
+target "FreestarInterstitialApp" do
+    pod 'FSAdSDK/Interstitial'
     pod 'PrebidMobileFS'
     pod 'Google-Mobile-Ads-SDK', '~> 7.24.1'
 end
