--- a/Examples/FreestarInterstitialApp/FreestarInterstitialApp/Info.plist
+++ b/Examples/FreestarInterstitialApp/FreestarInterstitialApp/Info.plist
@@ -15,11 +15,16 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1.1</string>
+	<string>0.2.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Program requires location to allow geo targeted advertisement.</string>
 	<key>UILaunchStoryboardName</key>
