--- a/Examples/FreestarInterstitialApp/Podfile
+++ b/Examples/FreestarInterstitialApp/Podfile
@@ -4,5 +4,5 @@ use_frameworks!
 
 target "FreestarInterstitialApp" do
     pod 'FSAdSDK/Interstitial'
-    pod 'Google-Mobile-Ads-SDK', :git => 'https://github.com/maddapper/GMA-iOS-SDK.git', :tag => '~> 7.41.0'
+    pod 'Google-Mobile-Ads-SDK', :git => 'https://github.com/maddapper/GMA-iOS-SDK.git', :tag => '7.41.0'
 end
