--- a/Examples/FreestarBannerApp/Podfile
+++ b/Examples/FreestarBannerApp/Podfile
@@ -4,6 +4,5 @@ use_frameworks!
 
 target "FreestarBannerApp" do
     pod 'FSAdSDK/Banner'
-    pod 'PrebidMobileFS'
-    pod 'Google-Mobile-Ads-SDK', '~> 7.24.1'
+    pod 'Google-Mobile-Ads-SDK', :git => 'https://github.com/freestarcapital/GMA-iOS-SDK.git', :tag => '7.41.0'
 end
