--- a/Examples/FreestarInterstitialApp/Podfile
+++ b/Examples/FreestarInterstitialApp/Podfile
@@ -4,5 +4,6 @@ use_frameworks!
 
 target "FreestarInterstitialApp" do
     pod 'FSAdSDK/Interstitial'
-    pod 'Google-Mobile-Ads-SDK', :git => 'https://github.com/freestarcapital/GMA-iOS-SDK.git', :tag => '7.41.0'
+    pod 'FSAdSDK/Mediation/MoPub'
+    pod 'Google-Mobile-Ads-SDK', :git => 'https://github.com/freestarcapital/GMA-iOS-SDK.git', :tag => '7.50.0'
 end
