--- a/Examples/FreestarInterstitialApp/Podfile
+++ b/Examples/FreestarInterstitialApp/Podfile
@@ -1,9 +1,9 @@
 source 'https://github.com/CocoaPods/Specs.git'
-platform :ios, '8.0'
+platform :ios, '9.0'
 use_frameworks!
 
 target "FreestarInterstitialApp" do
-    pod 'FSAdSDK/Interstitial'
+    pod 'FSAdSDK/Banner'  // Freestar Ad SDK
     pod 'FSAdSDK/Mediation/MoPub'
-    pod 'Google-Mobile-Ads-SDK', :git => 'https://github.com/freestarcapital/GMA-iOS-SDK.git', :tag => '7.50.0'
+    pod 'Google-Mobile-Ads-SDK', '7.50.0'  // Primary Ad SDK
 end
