--- a/Examples/FreestarBannerApp/Podfile
+++ b/Examples/FreestarBannerApp/Podfile
@@ -3,7 +3,7 @@ platform :ios, '9.0'
 use_frameworks!
 
 target "FreestarBannerApp" do
-    pod 'FSAdSDK/Banner'  // Freestar Ad SDK
+    pod 'FSAdSDK/Banner'
     pod 'FSAdSDK/Mediation/MoPub'
-    pod 'Google-Mobile-Ads-SDK', '7.50.0'  // Primary Ad SDK
+    pod 'Google-Mobile-Ads-SDK', '7.50.0'
 end
