--- a/Examples/FreestarInterstitialApp/Podfile
+++ b/Examples/FreestarInterstitialApp/Podfile
@@ -5,5 +5,6 @@ use_frameworks!
 target "FreestarInterstitialApp" do
     pod 'FSAdSDK/Banner'
     pod 'FSAdSDK/Mediation/MoPub'
+    pod 'FSAdSDK/Mediation/Facebook'
     pod 'Google-Mobile-Ads-SDK', '7.50.0'
 end
